fixed spacing

--- a/assets/mobile.scss
+++ b/assets/mobile.scss
@@ -346,7 +346,7 @@ ul {
     z-index: 9999999;
   }
 
-  @media only screen and (max-width: 1197px) {
+  @media only screen and (max-width: 600px) {
 
     * {
         font-family: Poppins, sans-serif;
